--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -79,7 +79,7 @@ html {
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: "Ballet", serif;
+  font-family: "Roboto Condensed", serif;
   font-size: 3.25rem;
 }
 
