--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -36,12 +36,12 @@ html {
 }
 @media (min-width: 48em) {
   html {
-    font-size: 16px;
+    font-size: 6px; /*16*/
   }
 }
 @media (min-width: 58em) {
   html {
-    font-size: 20px;
+    font-size: 4px; /*20*/
   }
 }
 
@@ -124,6 +124,7 @@ a.sidebar-nav-item:focus {
 .content {
   padding-top:    4rem;
   padding-bottom: 4rem;
+  font-size: 3px; /*None*/
 }
 
 @media (min-width: 48em) {
@@ -131,6 +132,7 @@ a.sidebar-nav-item:focus {
     max-width: 38rem;
     margin-left: 20rem;
     margin-right: 2rem;
+    font-size: 5px; /*None*/
   }
 }
 
@@ -138,6 +140,7 @@ a.sidebar-nav-item:focus {
   .content {
     margin-left: 22rem;
     margin-right: 4rem;
+    font-size: 7px; /*None*/
   }
 }
 
