--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -36,12 +36,12 @@ html {
 }
 @media (min-width: 48em) {
   html {
-    font-size: 6px; /*16*/
+    font-size: 16px;
   }
 }
 @media (min-width: 58em) {
   html {
-    font-size: 4px; /*20*/
+    font-size: 20px;
   }
 }
 
@@ -124,7 +124,6 @@ a.sidebar-nav-item:focus {
 .content {
   padding-top:    4rem;
   padding-bottom: 4rem;
-  font-size: 3px; /*None*/
 }
 
 @media (min-width: 48em) {
@@ -132,7 +131,6 @@ a.sidebar-nav-item:focus {
     max-width: 38rem;
     margin-left: 20rem;
     margin-right: 2rem;
-    font-size: 5px; /*None*/
   }
 }
 
@@ -140,7 +138,6 @@ a.sidebar-nav-item:focus {
   .content {
     margin-left: 22rem;
     margin-right: 4rem;
-    font-size: 7px; /*None*/
   }
 }
 
